@@ -64,6 +64,21 @@
           if the directory is already present.</para>
         </listitem>
         <listitem>
+          <para>[krejzi] - Renamed cyrus-sasl bootscript to saslauthd
+          and made it not exit 1 if saslauthd is not configured in order
+          to prevent hang at boot.</para>
+        </listitem>
+        <listitem>
+          <para>[krejzi] - Renamed kerberos bootscript to krb5 and
+          made it start kpropd, too. </para>
+        </listitem>
+        <listitem>
+          <para>[krejzi] - Renamed openldap bootscript to slapd.</para>
+        </listitem>
+        <listitem>
+          <para>[krejzi] - Bumped bootscripts to 20120814.</para>
+        </listitem>
+        <listitem>
           <para>[krejzi] - XScreenSaver 5.19.</para>
         </listitem>
       </itemizedlist>
