@@ -208,18 +208,18 @@ install -v -m700 -d /var/lib/sasl</userinput></screen>
       <title>Init Script</title>
 
       <para>If you need to run the <command>saslauthd</command> daemon at system
-      startup, install the <filename>/etc/rc.d/init.d/cyrus-sasl</filename>
+      startup, install the <filename>/etc/rc.d/init.d/saslauthd</filename>
       init script included in the <xref linkend="bootscripts"/>
-      package.</para>
+      package using the following command:</para>
 
       <indexterm zone="cyrus-sasl cyrus-sasl-init">
-        <primary sortas="f-cyrus-sasl-init">cyrus-sasl</primary>
+        <primary sortas="f-saslauthd">saslauthd</primary>
       </indexterm>
 
-<screen role="root"><userinput>make install-cyrus-sasl</userinput></screen>
+<screen role="root"><userinput>make install-saslauthd</userinput></screen>
 
       <note>
-        <para>You'll need to modify /etc/sysconfig/cyrus-sasl and replace the
+        <para>You'll need to modify /etc/sysconfig/saslauthd and replace the
         <option><replaceable>AUTHMECH</replaceable></option> parameter
         with your desired authentication mechanism.</para>
       </note>
