@@ -402,13 +402,6 @@ EOF</userinput></screen>
           the package.
         </para>
 
-        <para>
-          Install the <filename>/etc/rc.d/init.d/kerberos</filename> init
-          script included in the <xref linkend="bootscripts"/> package.
-        </para>
-
-<screen role="root"><userinput>make install-kerberos</userinput></screen>
-
       </sect4>
 
       <sect4>
@@ -422,6 +415,24 @@ EOF</userinput></screen>
         </para>
 
       </sect4>
+
+    </sect3>
+
+    <sect3 id="mitkrb-init">
+      <title>Init Script</title>
+
+      <para>
+        If you want to start <application>Kerberos</application> services
+        at boot, install the <filename>/etc/rc.d/init.d/krb5</filename> init
+        script included in the <xref linkend="bootscripts"/> package using
+        the following command:
+      </para>
+
+      <indexterm zone="mitkrb mitkrb-init">
+        <primary sortas="f-krb5">krb5</primary>
+      </indexterm>
+
+<screen role="root"><userinput>make install-krb5</userinput></screen>
 
     </sect3>
 
