@@ -363,22 +363,22 @@ cp -v -R            doc/guide/* \
 
       <para>
         To automate the startup of the LDAP server at system bootup,
-        install the <filename>/etc/rc.d/init.d/openldap</filename> init script
+        install the <filename>/etc/rc.d/init.d/slapd</filename> init script
         included in the <xref linkend="bootscripts"/> package
         using the following command:
       </para>
 
       <indexterm zone="openldap openldap-init">
-        <primary sortas="f-openldap">openldap</primary>
+        <primary sortas="f-slapd">slapd</primary>
       </indexterm>
 
-<screen role="root"><userinput>make install-openldap</userinput></screen>
+<screen role="root"><userinput>make install-slapd</userinput></screen>
 
       <note>
         <para>
           The init script starts the daemon without any parameters.
           You'll need to modify the 
-          <filename>/etc/sysconfig/openldap</filename> to include the 
+          <filename>/etc/sysconfig/slapd</filename> to include the 
           parameters needed for your specific configuration. See the 
           <command>slapd</command> man page for parameter information.
         </para>
@@ -393,7 +393,7 @@ cp -v -R            doc/guide/* \
         Start the LDAP server using the init script:
       </para>
 
-<screen role="root"><userinput>/etc/rc.d/init.d/openldap start</userinput></screen>
+<screen role="root"><userinput>/etc/rc.d/init.d/slapd start</userinput></screen>
 
       <para>
         Verify access to the LDAP server with the following command:
