@@ -1,6 +1,6 @@
 #!/bin/sh
 ########################################################################
-# Begin cyrus-sasl
+# Begin saslauthd
 #
 # Description : Cyrus SASL Boot Script
 #
@@ -20,7 +20,7 @@
 # Default-Stop:        0 1 6
 # Short-Description:   saslauthd startup script
 # Description:         This script starts the saslauthd daemon. It is
-#                      configured using the file /etc/sysconfig/cyrus-sasl.
+#                      configured using the file /etc/sysconfig/saslauthd.
 # X-LFS-Provided-By:   BLFS
 ### END INIT INFO
 
@@ -30,23 +30,23 @@ START="no"
 AUTHMECH=""
 OPTIONS=""
 
-if [ -f "/etc/sysconfig/cyrus-sasl" ]; then
-   . /etc/sysconfig/cyrus-sasl
+if [ -f "/etc/sysconfig/saslauthd" ]; then
+   . /etc/sysconfig/saslauthd
 fi
 
 case "${1}" in
    start)
 
       if [ "$START" != "yes" ]; then
-         MSG="Configure saslauthd in /etc/sysconfig/cyrus-sasl"
-         log_failure_msg "$MSG and set START to yes"
-         exit 1
+         MSG="Configure saslauthd in /etc/sysconfig/saslauthd"
+         log_warning_msg "$MSG and set START to yes"
+         exit 0
       fi
 
       if [ -z "$AUTHMECH" ]; then
          MSG="You need to select auth mechanism in"
-         log_failure_msg "$MSG /etc/sysconfig/cyrus-sasl"
-         exit 1
+         log_warning_msg "$MSG /etc/sysconfig/saslauthd"
+         exit 0
       fi
 
       if [ ! -d /var/run/saslauthd ]; then
@@ -79,4 +79,4 @@ case "${1}" in
  esac
 exit 0
 
-# End cyrus-sasl
+# End saslauthd
