@@ -1,4 +1,4 @@
-# Begin /etc/sysconfig/cyrus-sasl
+# Begin /etc/sysconfig/saslauthd
 
 # Change this to "yes" and select authentification mechanism below
 # to enable saslauthd
@@ -8,14 +8,14 @@ START="no"
 # Which authentification mechanism should saslauthd use?
 #
 # These are some of the available options:
-# kerberos5 -- use Kerberos 5 (available if you compiled cyrus-sasl with 
+# kerberos5 -- use Kerberos 5 (available if you compiled saslauthd with 
 #              MIT Kerberos5 support).
-# pam       -- use PAM (available if you compiled cyrus-sasl with 
+# pam       -- use PAM (available if you compiled saslauthd with 
 #              Linux PAM support).
 # shadow    -- use the local shadow password file
 # sasldb    -- use the local sasldb database file
 # ldap      -- use LDAP (configuration is in /etc/saslauthd.conf) 
-#              (Available only if you compiled cyrus-sasl with
+#              (Available only if you compiled saslauthd with
 #              OpenLDAP support and with --enable-ldapdb configure switch).
 #
 # Alternatively, you can run /usr/sbin/pluginviewer to see which plugins 
@@ -28,5 +28,5 @@ AUTHMECH=""
 
 OPTIONS=""
 
-# End /etc/sysconfig/cyrus-sasl
+# End /etc/sysconfig/saslauthd
 
